DT-1905: 🐛 Fix ldap being unable to connect due to upgrade